# open-context

./: .gitignore  LICENSE  LICENSE_ja.md  README.md  README_ja.md  SECURITY.md  TERMS.md  TERMS_ja.md
.github/workflows/: quality-loop.yml  readme-sync.yml
docs/current/: README.md  _index.md
docs/current/architecture/: auth.md  data-schemas.md  deployment.md  overview.md
docs/current/clients/: tool-calling.md
docs/current/tools/: reference.md
quality/: acceptance.py  baseline.json  gen_readme.py  run.py
worker/: .dev.vars.example  package-lock.json  package.json  pylock.toml  pyproject.toml  wrangler.jsonc
worker/src/: auth.py  auth_resolver.py  cache_store.py  chunker.py  encryption.py  entry.py  github_client.py  mcp_handler.py  oauth_endpoints.py  oauth_store.py  overrides.py  registry_npm.py  registry_pypi.py  session.py  user_store.py  version_resolver.py
worker/tests/: conftest.py  test_core.py
